# gkl-cli

./: .dockerignore  .gitignore  Dockerfile  README.md  gkl_entry.py  pyproject.toml
.github/workflows/: release.yml
docs/: gkl-podcast.md  trade-analyzer.md
gkl/: __init__.py  app.py  datastore.py  mlb_api.py  shared_cache.py  skipper.py  statcast.py  stats.py  trade.py  updater.py  yahoo_api.py  yahoo_auth.py
gkl/web/: api_cache.py  server.py  session.py
gkl/web/templates/: app.html  login.html
scripts/: take_screenshots.py
tests/: test_statcast.py
