[project]
name = "gkl-cli"
version = "0.1.0"
description = "Fantasy baseball command center CLI"
requires-python = ">=3.12"
dependencies = [
    "textual>=3.0",
    "httpx>=0.28",
    "textual-plotext>=1.0.0",
    "anthropic>=0.52",
]

[project.optional-dependencies]
web = [
    "textual-serve>=1.1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "cryptography>=43.0",
    "itsdangerous>=2.0",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
gkl = "gkl.app:main"
gkl-web = "gkl.web.server:main"

[tool.hatch.build.targets.wheel]
packages = ["gkl"]

[tool.hatch.build.targets.wheel.force-include]
"gkl/web/templates" = "gkl/web/templates"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
